language/move-lang/tests/move_check/translated_ir_tests/move/commands/assign_resource.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/commands/assign_resource.move:6:9 ───
   │
 6 │         t = T {}; &t;
   │         ^ Invalid assignment to local 't'
   ·
 5 │         let t = T{}; &t;
   │             - The local contains a value due to this assignment. The value does not have the 'drop' ability and must be used before you assign to this local again
   ·
 5 │         let t = T{}; &t;
   │                 --- The type '0x8675309::M::T' does not have the ability 'drop'
   ·
 2 │     struct T {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   │

error: 

   ┌── tests/move_check/translated_ir_tests/move/commands/assign_resource.move:6:21 ───
   │
 6 │         t = T {}; &t;
   │                     ^ Invalid return
   ·
 6 │         t = T {}; &t;
   │         - The local 't' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
   ·
 5 │         let t = T{}; &t;
   │                 --- The type '0x8675309::M::T' does not have the ability 'drop'
   ·
 2 │     struct T {}
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   │

