language/move-lang/tests/move_check/translated_ir_tests/move/commands/assign_resource.move
module M {
    resource struct T {}

    fun no() {
        let t = T{}; &t;
        t = T {}; &t;
    }

}

// check: STLOC_UNSAFE_TO_DESTROY_ERROR
